fix white space above fullscreen header on non-super articles

--- a/components/main_layout/stylesheets/body.styl
+++ b/components/main_layout/stylesheets/body.styl
@@ -125,6 +125,9 @@ html[data-useragent*="iPad"]
   &.body-header-fixed
     #main-layout-container
       margin-top main-header-height
+    &.body-fullscreen-article
+      #main-layout-container
+        margin-top 0px
 
 .body-no-padding
   #main-layout-container
